--- a/index.html
+++ b/index.html
@@ -47,5 +47,8 @@
                 <h3>Rs.120</h3>
         </div>
     </section>
+    <section>
+        <footer>made by mamata</footer>
+    </section>
 </body>
 </html>
