--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=D, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Dine</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <section class="home" id="home">
@@ -13,22 +16,28 @@
                 <h1>Dine <span> with us</span></h1>
             </div>
             <ul>
-                <li><a href="#home">home</a></li>
-                <li><a href="veg-index.html">Veg</a></li>
-                <li><a href="non-veg-index.html">Non-Veg </a></li>
-                <li><a href="ice_cream-index.html">Ice-Cream</a></li>
-                <li><a href="milkshake-index.html">Milkshakes</a></li>
-                <li><a href="juices-index.html">Juices</a></li>
-                <li><a href="cackes-index.html">Cakes</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="veg.html">Veg</a></li>
+                <li><a href="non-veg.html">Non-Veg </a></li>
+                <li><a href="ice_cream.html">Ice-Cream</a></li>
+                <li><a href="milkshake.html">Milkshakes</a></li>
+                <li><a href="juices.html">Juices</a></li>
+                <li><a href="cakes.html">Cakes</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
+            <div class="social">
+               <a href="#"><i class="fa fa-instagram"></i></a>
+               <a href="#"><i class="fa fa-twitter"></i></a> 
+               <a href="#"><i class="fa fa-facebook"></i></a>
+               
+            </div>
         </nav>
         <div class="banner">
             <h2> welcome to <span>Dine with us</span></h2>
-            <h3>Delevering delicious food in the city</h3>
+            <h3>Delivering delicious food in the city</h3>
         </div>
         <div class="special">
-            <h1>today's special</h1>
+            <h1>Today's special</h1>
             <div class="special-box">
                 <img src="Photos/special/chicken-kosha.jpeg">
                 <h2>Chicken kosha</h2>
@@ -47,5 +56,6 @@
                 <h3>Rs.120</h3>
         </div>
     </section>
+    <script src="javascript/script.js"></script>
 </body>
 </html>
