--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
             <input type="email" name="" id="txtMail" placeholder="Your Email id">
         </div>
         <div class="from-group">
-            <textarea name="message" id="txtMsg" cols="42" rows="4" placeholder="Message"></textarea>
+            <textarea name="message" id="txtMsg" cols="42" rows="4" placeholder="Feedback"></textarea>
         </div>
         <div class="from-group">
             <button class="btn-send" >Send</button>
