--- a/veg.html
+++ b/veg.html
@@ -169,8 +169,116 @@
 
             <div class="food-box">
                 <img src="Photos/veg/sahi_paneer.jpeg"class="food-img" alt="">
-                <h2 class="food-title">Fried Rice</h2>
+                <h2 class="food-title">sahi paneer</h2>
                 <h3 class="food-price">Rs.240.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/veg/chole-bhature.jpeg"class="food-img" alt="">
+                <h2 class="food-title">chole bhature</h2>
+                <h3 class="food-price">Rs.150.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/veg/Curd-Rice.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Curd Rice Rice</h2>
+                <h3 class="food-price">Rs.190.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/veg/Dal-Makhani.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Dal Makhani</h2>
+                <h3 class="food-price">Rs.140.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/veg/Garlic-Naan.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Garlic Naan</h2>
+                <h3 class="food-price">Rs.100.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/veg/Hara-Bhara-Kabab.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Hara Bhara Kabab</h2>
+                <h3 class="food-price">Rs.140.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/veg/Kadhi-Pakora.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Kadhi Pakora</h2>
+                <h3 class="food-price">Rs.150.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+            
+            <div class="food-box">
+                <img src="Photos/veg/Tandoori-Paneer-Tikka.jpeg" class="food-img" alt="">
+                <h2 class="food-title"> <center>Tandoori Paneer Tikka</center></h2>
+                <h3 class="food-price">Rs.190.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/veg/Rajma-Masala.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Rajma Masala</h2>
+                <h3 class="food-price">Rs.180.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/veg/Mushroom-Kadai.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Mushroom Kadai</h2>
+                <h3 class="food-price">Rs.240.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/veg/Mushroom-Masala.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Mushroom Masala</h2>
+                <h3 class="food-price">Rs.260.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/veg/Khichdi.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Khichdi</h2>
+                <h3 class="food-price">Rs.180.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/veg/Lachha-Paratha.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Lachha Paratha</h2>
+                <h3 class="food-price">Rs.70.00</h3>
                 <button class="add-cart">
                     Add to Cart
                 </button>
