--- a/cakes.html
+++ b/cakes.html
@@ -19,7 +19,7 @@
 <body>
     <section  class="food">
         <header class="header">
-            <h1>Cackes</h1>
+            <h1>Cakes</h1>
             <nav>
                 <ul>
                 <li><a href="index.html">home</a></li>
