--- a/cakes.html
+++ b/cakes.html
@@ -180,6 +180,114 @@
                     Add to Cart
                 </button>
             </div>
+
+            <div class="food-box">
+                <img src="Photos/cakes/Blueberry-Cheesecake.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Blueberry Cheesecake</center></h2>
+                <h3 class="food-price">Rs.270.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/cakes/Chocolate-Truffle-Pastry.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Chocolate Truffle Pastry</center></h2>
+                <h3 class="food-price">Rs.280.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/cakes/Coconut-Pandan-Cake-Slice.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Coconut Pandan Cake Slice</center></h2>
+                <h3 class="food-price">Rs.290.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/cakes/Ferrero-Rocher-Pastry.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Ferrero Rocher Pastry</center></h2>
+                <h3 class="food-price">Rs.260.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/cakes/Galaxy-Mirror-Glaze-Pastry.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Galaxy Mirror Glaze Pastry</center></h2>
+                <h3 class="food-price">Rs.300.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/cakes/Gold-Dusted-Chocolate-Pastry.jpg"class="food-img" alt="">
+                <h2 class="food-title"><center>Gold Dusted Chocolate Pastry</center></h2>
+                <h3 class="food-price">Rs.290.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/cakes/Lotus-Biscoff-Pastry.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Lotus Biscoff Pastry</center></h2>
+                <h3 class="food-price">Rs.230.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+            
+            <div class="food-box">
+                <img src="Photos/cakes/Lychee-Rose-Cream-Pastry.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Lychee Rose Cream Pastry</center></h2>
+                <h3 class="food-price">Rs.290.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/cakes/Matcha-pastry.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Matcha pastry</center></h2>
+                <h3 class="food-price">Rs.280.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/cakes/Mochi-Ice-Cream-Pastry.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Mochi Ice-Cream Pastry</center></h2>
+                <h3 class="food-price">Rs.270.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/cakes/Thandai-Mousse-Pastry.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Thandai Mousse Pastry</center></h2>
+                <h3 class="food-price">Rs.250.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/cakes/Tiramisu-Pastry.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Tiramisu-Pastry</center></h2>
+                <h3 class="food-price">Rs.240.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
         </div>
     </section>
     
