--- a/ice_cream.html
+++ b/ice_cream.html
@@ -83,7 +83,7 @@
             </div>
 
             <div class="food-box">
-                <img src="Photos/ice-creme/black-current2.jpeg"class="food-img" alt="">
+                <img src="Photos/ice-creme/Black-Currant.jpg"class="food-img" alt="">
                 <h2 class="food-title">Black Current <br> <center>Ice-cream</center></h2>
                 <h3 class="food-price">Rs.120.00</h3>
                 <button class="add-cart">
@@ -180,6 +180,116 @@
                     Add to Cart
                 </button>
             </div>
+
+            <div class="food-box">
+                <img src="Photos/ice-creme/Black-Sesame-Ice-Cream.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Black-Sesame<br>Ice-cream</center></h2>
+                <h3 class="food-price">Rs.190.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/ice-creme/Coconut-Ice-Cream.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Coconut <br>Ice-cream</center></h2>
+                <h3 class="food-price">Rs.170.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/ice-creme/Vanilla.jpg"class="food-img" alt="">
+                <h2 class="food-title"><center>Vanilla <br>Ice-cream</center></h2>
+                <h3 class="food-price">Rs.180.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/ice-creme/Durian-Ice-Cream.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Durian <br>Ice-cream</center></h2>
+                <h3 class="food-price">Rs.180.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/ice-creme/Gulkand-Ice-Cream.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Gulkand <br>Ice-cream</center></h2>
+                <h3 class="food-price">Rs.150.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/ice-creme/Keto-Chocolate-Ice-Cream.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Keto Chocolate <br>Ice-cream</center></h2>
+                <h3 class="food-price">Rs.160.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/ice-creme/Malai-Kulfi.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Malai <br>Kulfi</center></h2>
+                <h3 class="food-price">Rs.180.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/ice-creme/Mastic-ice-cream.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Mastic <br>Ice-cream</center></h2>
+                <h3 class="food-price">Rs.190.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/ice-creme/Mint-Chocolate-Chip.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Mint chocolate chps <br>Ice-cream</center></h2>
+                <h3 class="food-price">Rs.180.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/ice-creme/Pista-Kulfi.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Pista <br>Kulfi</center></h2>
+                <h3 class="food-price">Rs.160.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/ice-creme/Rosewater&Pistachio.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Rosewater Pistachio <br>Ice-cream</center></h2>
+                <h3 class="food-price">Rs.180.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/ice-creme/Wasabi-Ice-Cream.jpeg"class="food-img" alt="">
+                <h2 class="food-title"><center>Wasabi <br>Ice-cream</center></h2>
+                <h3 class="food-price">Rs.210.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            
         </div>
     </section>
     
