--- a/milkshake.html
+++ b/milkshake.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="food-box">
                 <img src="Photos/milkshake/Avocado-Milkshake.jpg"class="food-img" alt="">
-                <h2 class="food-title">Avocado Milkshake</h2>
+                <h2 class="food-title">Avocado <br> Milkshake</h2>
                 <h3 class="food-price">Rs.120.00</h3>
                 <button class="add-cart">
                     Add to Cart
@@ -119,7 +119,7 @@
             
             <div class="food-box">
                 <img src="Photos/milkshake/Ferrero-Rocher-Milkshake.jpg"class="food-img" alt="">
-                <h2 class="food-title">Ferrero Milkshake</h2>
+                <h2 class="food-title">Ferrero <br>Milkshake</h2>
                 <h3 class="food-price">Rs.250.00</h3>
                 <button class="add-cart">
                     Add to Cart
@@ -128,7 +128,7 @@
             
             <div class="food-box">
                 <img src="Photos/milkshake/Gulkand-Milkshake.jpg"class="food-img" alt="">
-                <h2 class="food-title">Gulkand Milkshake</h2>
+                <h2 class="food-title">Gulkand <br>Milkshake</h2>
                 <h3 class="food-price">Rs.210.00</h3>
                 <button class="add-cart">
                     Add to Cart
@@ -174,6 +174,114 @@
             <div class="food-box">
                 <img src="Photos/milkshake/Vanilla-Milkshake.jpg"class="food-img" alt="">
                 <h2 class="food-title">Vanilla Milkshake</h2>
+                <h3 class="food-price">Rs.210.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/milkshake/Black-Forest-Milkshake.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Black Forest <br> Milkshake</h2>
+                <h3 class="food-price">Rs.250.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/milkshake/Blueberry-Milkshake.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Blueberry <br> Milkshake</h2>
+                <h3 class="food-price">Rs.230.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/milkshake/Butterscotch-Milkshake.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Butterscotch <br> Milkshake</h2>
+                <h3 class="food-price">Rs.290.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/milkshake/Chikoo-Milkshake.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Chikoo Milkshake</h2>
+                <h3 class="food-price">Rs.210.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/milkshake/Cold-Coffee.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Cold Coffee</h2>
+                <h3 class="food-price">Rs.220.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/milkshake/Falooda-Milkshake.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Falooda</h2>
+                <h3 class="food-price">Rs.260.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/milkshake/Ferrero-Rocher-Milkshake.jpg"class="food-img" alt="">
+                <h2 class="food-title">Rochar Milkshake</h2>
+                <h3 class="food-price">Rs.210.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/milkshake/Kiwi-Milkshake.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Kiwi Milkshake</h2>
+                <h3 class="food-price">Rs.220.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/milkshake/Litchi-Milkshake.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Litchi Milkshake</h2>
+                <h3 class="food-price">Rs.230.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/milkshake/Mocha-Milkshake.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Mocha Milkshake</h2>
+                <h3 class="food-price">Rs.200.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/milkshake/Red-Velvet-Milkshake.jpeg"class="food-img" alt="">
+                <h2 class="food-title">Red Velvet <br>Milkshake</h2>
+                <h3 class="food-price">Rs.290.00</h3>
+                <button class="add-cart">
+                    Add to Cart
+                </button>
+            </div>
+
+            <div class="food-box">
+                <img src="Photos/milkshake/White-Chocolate-Shake.jpeg"class="food-img" alt="">
+                <h2 class="food-title">White Chocolate <br>  Milkshake</h2>
                 <h3 class="food-price">Rs.210.00</h3>
                 <button class="add-cart">
                     Add to Cart
